<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="meus_aplicativos_do_nanodegree">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="launch_app_message">This button will launch my %s app!</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
