<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.luizguilherme.myappportfolio.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/meus_aplicativos_do_nanodegree"
        android:textSize="@dimen/font_large"
        android:gravity="center"
        />

    <Button
        android:id="@+id/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        style="@style/AppsButton"/>

    <Button
        android:id="@+id/stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        style="@style/AppsButton"/>

    <Button
        android:id="@+id/built_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        style="@style/AppsButton"/>

    <Button
        android:id="@+id/app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        style="@style/AppsButton"/>

    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        style="@style/AppsButton"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        style="@style/AppsButton"/>


</LinearLayout>
